--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <button class="acc-header">🤒 Absences & Maladie</button>
                     <div class="acc-content">
                         <div class="acc-inner">
-                            <p>vous pouvez bénéficiez d’un droit aux congés payés dans les conditions légales prévues dans la convention collective. vous devez poser votre demande de congés conformément aux dispositions y afférentes dans le règlement intérieur. en cas de maladie, vous devez prévenir au plus vite votre responsable hiérarchique et la direction, et fournir sous 48 heures l’avis d’arrêt de travail délivré par votre médecin. tout retard ou autre motif d’absence doit également être justifié. en tant que salarié vous avez le choix ou non d’adhérer à notre mutuelle d’entreprise. un formulaire vous a été remis lors de votre signature de contrat.</p>
+                            <p>Vous pouvez bénéficiez d’un droit aux congés payés dans les conditions légales prévues dans la convention collective. Vous devez poser votre demande de congés conformément aux dispositions y afférentes dans le règlement intérieur. en cas de maladie, vous devez prévenir au plus vite votre responsable hiérarchique et la direction, et fournir sous 48 heures l’avis d’arrêt de travail délivré par votre médecin. tout retard ou autre motif d’absence doit également être justifié. en tant que salarié vous avez le choix ou non d’adhérer à notre mutuelle d’entreprise. un formulaire vous a été remis lors de votre signature de contrat.</p>
                         </div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                     <button class="acc-header">💰 Paie & Convention</button>
                     <div class="acc-content">
                         <div class="acc-inner">
-                            <p>la paie est effectuée par virement bancaire en fin de chaque mois. elle couvre la période suivante : la dernière semaine du mois précédent ainsi que les trois premières semaines du mois en cours. convention collective : régit l’ensemble du droit de travail (contrat de travail, hygiène, congés, salaires, classification, ...) l’association projet relève de la convention collective alisfa disponible en ligne.</p>
+                            <p>La paie est effectuée par virement bancaire en fin de chaque mois. Elle couvre la période suivante : la dernière semaine du mois précédent ainsi que les trois premières semaines du mois en cours. Convention collective : régit l’ensemble du droit de travail (contrat de travail, hygiène, congés, salaires, classification, ...) l’association projet relève de la convention collective alisfa disponible en ligne. Si vous avez choisi de recevoir vos fiches de paies en format dématerialiser, vous les trouverez sur le site Lucca, un mail vous sera envoyé.</p>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
     <section id="portail" class="cta-section">
         <div class="cta-content">
             <h2>Accéder à mon espace salarié</h2>
-            <p>Retrouvez vos congés, fiches de paie et documents administratifs.</p>
+            <p>Vous pouvez trouver notre site officiel afin de suivre toute l'actualité.</p>
             <a href="https://association-projet.org/index.php/une-voie-choisie-vers-lemploi/" target="_blank" class="big-btn">CONNEXION PORTAIL</a>
             <br><br>
             <p class="final-word">"NOUS VOUS REMERCIONS CHALEUREUSEMENT D’AVOIR PRIS LE TEMPS DE
