--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <br><br>
             <p class="final-word">"NOUS VOUS REMERCIONS CHALEUREUSEMENT D’AVOIR PRIS LE TEMPS DE
 DÉCOUVRIR NOTRE LIVRET D’ACCUEIL NUMÉRIQUE. CE DERNIER N’EST QU’UNE
-PREMIÈRE ÉTAPE DANS VOTRE INTÉGRATION AU SEIN DU CENTRE SOCIAL PROET.
+PREMIÈRE ÉTAPE DANS VOTRE INTÉGRATION AU SEIN DU CENTRE SOCIAL PROJET.
 
 EN REJOIGNANT NOTRE ÉQUIPE, VOUS INTÉGREZ UNE STRUCTURE PROFONDÉMENT
 ATTACHÉE AUX VALEURS DE SOLIDARITÉ, DE RESPECT, D’ÉCOUTE ET
